; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_mbedtls.c_crypto_bignum_mulmod.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_mbedtls.c_crypto_bignum_mulmod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_bignum = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_bignum_mulmod(%struct.crypto_bignum* %0, %struct.crypto_bignum* %1, %struct.crypto_bignum* %2, %struct.crypto_bignum* %3) #0 {
  %5 = alloca %struct.crypto_bignum*, align 8
  %6 = alloca %struct.crypto_bignum*, align 8
  %7 = alloca %struct.crypto_bignum*, align 8
  %8 = alloca %struct.crypto_bignum*, align 8
  %9 = alloca i32, align 4
  store %struct.crypto_bignum* %0, %struct.crypto_bignum** %5, align 8
  store %struct.crypto_bignum* %1, %struct.crypto_bignum** %6, align 8
  store %struct.crypto_bignum* %2, %struct.crypto_bignum** %7, align 8
  store %struct.crypto_bignum* %3, %struct.crypto_bignum** %8, align 8
  %10 = load %struct.crypto_bignum*, %struct.crypto_bignum** %8, align 8
  %11 = bitcast %struct.crypto_bignum* %10 to i32*
  %12 = load %struct.crypto_bignum*, %struct.crypto_bignum** %5, align 8
  %13 = bitcast %struct.crypto_bignum* %12 to i32*
  %14 = load %struct.crypto_bignum*, %struct.crypto_bignum** %6, align 8
  %15 = bitcast %struct.crypto_bignum* %14 to i32*
  %16 = load %struct.crypto_bignum*, %struct.crypto_bignum** %7, align 8
  %17 = bitcast %struct.crypto_bignum* %16 to i32*
  %18 = call i32 @esp_mpi_mul_mpi_mod(i32* %11, i32* %13, i32* %15, i32* %17)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = icmp ne i32 %19, 0
  %21 = zext i1 %20 to i64
  %22 = select i1 %20, i32 -1, i32 0
  ret i32 %22
}

declare dso_local i32 @esp_mpi_mul_mpi_mod(i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
